# IBMRAG

./: README.md  main.py  pyproject.toml
backend/: .env.example  main.py  pyproject.toml  run_api.py
backend/chroma_db/: chroma.sqlite3
backend/samples/: patient_001_cbc.txt  patient_002_metabolic.txt  patient_003_lipid_cbc.txt
backend/src/: agent.py  api.py  config.py  uploader.py  vectorstore.py
backend/tests/: __init__.py  test_api.py
demo-docs/: 01-business-requirements.md  02-user-stories.md  03-functional-specification.md
docs/sdlc-demo/: 01-requirements.md  02-user-stories.md  03-functional-spec.md  04-solution-design.md  05-test-plan.md  06-defects-change.md  07-traceability-matrix.md  08-sdlc-dashboard.md
mobile/: pubspec.yaml
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/core/icons/: ionicons.dart
mobile/lib/core/theme/: app_theme.dart  theme_extensions.dart
mobile/lib/core/widgets/: app_buttons.dart  app_surface.dart
mobile/lib/features/blood_test/data/models/: blood_test_analysis.dart
mobile/lib/features/blood_test/data/repositories/: blood_test_repository.dart
mobile/lib/features/blood_test/state/: blood_test_upload_controller.dart  blood_test_upload_state.dart
mobile/lib/features/blood_test/ui/components/: analysis_summary_card.dart  marker_list.dart  recommendation_list.dart  upload_drop_zone.dart  upload_status_card.dart
mobile/lib/features/blood_test/ui/pages/: blood_test_upload_page.dart
mobile/test/: widget_test.dart
