[project]
name = "ibmrag"
version = "0.1.0"
description = "Blood test RAG system using IBM WatsonX.ai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.3.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "chromadb>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
